--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<div class="counter">
-  <span class="count">0</span>
-  <p>Total Visitors</p>
-</div>
+<html>
+  <head>
+    <title>My Website</title>
+    <script src="scripts.js"></script>
+  </head>
+  <body>
+    <div class="counter">
+      <span class="count">0</span>
+      <p>Total Visitors</p>
+    </div>
+    <script>
+      animateCounter();
+    </script>
+  </body>
+</html>
+
