--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>My Website</title>
     <script src="scripts.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="counter">
